// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellUtils CellHandlers changeCellEditorToCellTextHandler 1`] = `
Array [
  Object {
    "editableCells": Array [
      Object {
        "field": "column",
        "rowKeyValue": 1,
      },
      Object {
        "field": "column",
        "rowKeyValue": 2,
      },
    ],
  },
]
`;

exports[`CellUtils CellHandlers changeCellTextToCellEditorHandler 1`] = `
Array [
  Object {
    "editableCells": Array [
      Object {
        "field": "column",
        "rowKeyValue": 1,
      },
      Object {
        "field": "column2",
        "rowKeyValue": 2,
      },
    ],
  },
]
`;
